--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="navbar">
 
   <div class="dropdown">
-  <button class="dropbtn" onclick="myFunction()">Available Colors
+  <button class="dropbtn" onclick="myFunction()">Available Colours
     <i class="fa fa-caret-down"></i>
   </button>
   <div class="dropdown-content" id="myDropdown">
@@ -45,7 +45,7 @@
       type="text"
       name="search"
       id="input"
-      placeholder="Type Color Here!"
+      placeholder="Type Colour Here!"
     /><br /><br />
     <div id="result">
       <script src="./script.js" defer></script>
